prost-unwrap-proto-tests/tests/ui/with_struct_invalid_field_1.stderr
error: Field must be a single ident literal, e.g. `field1`
  --> tests/ui/with_struct_invalid_field_1.rs:12:22
   |
12 |     .with_struct(A, ["field"]));
   |                      ^^^^^^^
